<resources>
    <string name="app_name">人脸识别系统</string>

    <string name="no_device">未检测到设备</string>
    <string name="open_fail_device">打开设备失败</string>
    <string name="liveness_check_invalid">不在活体检测范围</string>
    <string name="liveness_check_fail">非活体</string>
    <string name="liveness_check_success">活体检测通过</string>
    <string name="sign_out">再按一次返回键退出应用</string>
    <string name="settings">设置</string>
    <string name="face_recognition">人脸注册</string>
    <string name="face_setting">参数设置</string>
    <string name="face_regist">人脸注册</string>
    <string name="insert_cam">拍照录入</string>
    <string name="insert_vid">视频录入</string>
    <string name="insert_pic">照片录入</string>
    <string name="insert_delete">全部删除</string>
    <string name="send">发送指令</string>
    <string name="identify_success">人脸识别完成</string>
    <string name="open">开门</string>
    <string name="add_face">添加</string>
    <string name="time_default">"20:00"</string>
    <string name="data_default">"2018&#8211;12&#8211;15"</string>
    <string name="regist_title">人脸识别系统</string>
    <string name="no_registing">"无人脸"</string>
    <string name="registing">"识别中…"</string>
    <string name="registed">"识别成功"</string>
    <string name="nouser">非用户</string>


</resources>
