<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<ImageView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="@drawable/background" />-->


    <!--<FrameLayout-->
        <!--android:id="@+id/gl_g"-->
        <!--android:layout_width="640dp"-->
        <!--android:layout_height="480dp"-->
        <!--android:layout_gravity="center" />-->
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <com.orbbec.view.GlFrameSurface
            android:id="@+id/gl_surface"
            android:layout_width="@dimen/color_width"
            android:layout_height="@dimen/color_height"
            android:layout_marginTop="@dimen/dimen_40"
            android:layout_gravity="center|top" />

        <!-- 人脸框 -->
        <SurfaceView
            android:id="@+id/pointView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@null" />

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="top|start"
        android:textColor="@color/colorText5"
        android:textSize="@dimen/dimen_25"
        android:text="@string/regist_title"/>

    <TextView
        android:id="@+id/txt_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/recognition_tip_margin_top"
        android:textColor="@color/colorText5"
        android:textSize="@dimen/recognition_tip_size" />

    <TextView
        android:id="@+id/recongition_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center|end"
        android:textSize="@dimen/dimen_25"
        android:textColor="@color/colorText5"
        android:text="@string/no_registing"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_gravity="center|left"
        android:layout_marginLeft="@dimen/dimen_25">

        <TextView
            android:id="@+id/time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_default"
            android:textColor="@android:color/white"
            android:textSize="@dimen/time_size" />

        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_default"
            android:textColor="@android:color/white"
            android:textSize="@dimen/date_size" />

    </LinearLayout>

    <Button
        android:id="@+id/RegistButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_40"
        android:layout_gravity="bottom|end"
        android:textSize="30sp"
        android:text="@string/face_regist"/>

    <Button
        android:id="@+id/SettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_40"
        android:layout_gravity="bottom|start"
        android:layout_marginRight="@dimen/dimen_40"
        android:text="@string/settings" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <com.orbbec.view.OpenGlView
            android:id="@+id/depthview"
            android:layout_margin="@dimen/dimen_25"
            android:layout_width="@dimen/dimen_320"
            android:layout_height="@dimen/dimen_240" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/voice_mb">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/voice_right"
            android:visibility="gone"
            android:text="测试版本"
            />
    </LinearLayout>



</FrameLayout>