<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/ll_insert_cam"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_insert_cam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/insert_cam" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/insert_cam"
                android:textColor="#898989"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <LinearLayout
            android:id="@+id/ll_insert_vid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_insert_vid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/insert_vid" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/insert_vid"
                android:textColor="#898989"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <LinearLayout
            android:id="@+id/ll_insert_pic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_insert_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/insert_pic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/insert_pic"
                android:textColor="#898989"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <LinearLayout
            android:id="@+id/ll_insert_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_insert_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/insert_delete" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/insert_delete"
                android:textColor="#898989"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_head"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:overScrollMode="never" />

</LinearLayout>